# winbot

./: .env  LICENSE  main.py  pyproject.toml  winbot.db
static/styles/: style.css
templates/: index.html
