[tool.poetry]
name = "repl_python3_winbot"
version = "0.1.0"
description = ""
authors = ["P4tkryP4tkry <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
python-dotenv = "^0.19.2"
pytube = "^11.0.2"
waitress = "^2.0.0"
youtube-search-python = "^1.5.3"
PyNaCl = "^1.4.0"
discord-py-slash-command = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
